Fix for alignment bug

--- a/src/styles/HeaderBar.module.css
+++ b/src/styles/HeaderBar.module.css
@@ -210,6 +210,10 @@
     display: none;
   }
 
+  .menu__container__right {
+    width: 50%;
+  }
+
   .icon__container__logout {
     display: none;
   }
@@ -225,5 +229,11 @@
   .label {
     justify-content: flex-start;
     align-items: flex-start;
+    width: 50%;
+  }
+
+  .label__text {
+    text-align: left;
+    line-height: 1rem;
   }
 }
